--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -5,6 +5,10 @@
     margin: 50px 0;
   }
   
+.active{
+  border-bottom: 10px solid rgba(255, 81, 0, 0.5);
+}
+
   .infected {
     border-bottom: 10px solid rgba(0, 0, 255, 0.5);
   }
@@ -16,3 +20,4 @@
   .deaths{
     border-bottom: 10px solid rgba(255, 0, 0, 0.5);
   }
+
